# claudette-agent

./: .gitignore  README.md  examples.ipynb  pyproject.toml  streaming_test.py
claudette_agent/: __init__.py  chat.py  client.py  core.py  mcp.py  streaming.py  structured.py  tools.py
tests/: __init__.py  test_core.py
