[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claudette-agent"
version = "0.1.0"
description = "Claude Agent SDK wrapper with Claudette-compatible API"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Sebastian Gonzalez Aseretto", email = "sgaseretto@gmail.com"}
]
maintainers = [
    {name = "Sebastian Gonzalez Aseretto", email = "sgaseretto@gmail.com"}
]
keywords = [
    "claude",
    "anthropic",
    "ai",
    "llm",
    "agent",
    "sdk",
    "claudette",
    "mcp",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk>=0.1.0",
]

[project.optional-dependencies]
pydantic = [
    "pydantic>=2.0",
]
all = [
    "pydantic>=2.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "isort>=5.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/sgaseretto/claudette-agent"
Documentation = "https://github.com/sgaseretto/claudette-agent#readme"
Repository = "https://github.com/sgaseretto/claudette-agent"
Issues = "https://github.com/sgaseretto/claudette-agent/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["claudette_agent*"]

[tool.setuptools.package-data]
claudette_agent = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
